# tl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tensor_old.hpp
tests/: run_all_tests.cpp  test.hpp  test_broadcasting.cpp  test_dot_product.cpp  test_elementary_functions.cpp  test_functional.cpp  test_linalg.cpp  test_tensor_core.cpp
tl/: linalg_utils.hpp  tensor.hpp  tensor_utils.hpp  tl.hpp  view.hpp
tl/functional/: functions.hpp
tl/linalg/: linalg_utils.hpp
tl/tensor_core/: broadcasting.hpp  tensor.hpp  tensor_utils.hpp  view.hpp
